<resources>
    <string name="app_name">Regional Language Admin App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="done">done</string>
    <string name="add_topic">Add Topic</string>
    <string name="add_set">Add Set</string>
    <string name="question">question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="add">Add</string>
    <string name="correct_answer">Correct answer</string>
    <string name="add_question">Add Question</string>
    <string name="correct_option">Correct Option</string>
    <string name="no_items_available">no items available</string>
    <string name="long_click_to_delete_item">long click to delete item</string>

    <string-array name="options_array">
        <item>option 1</item>
        <item>option 2</item>
        <item>option 3</item>
        <item>option 4</item>
    </string-array>
</resources>