<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ashutosh.jharkhand.regionallanguageadminapp.viewModel.MainViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/long_click_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/long_click_to_delete_item"
            android:textColor="@color/black" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.TopicFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topic_recycler_view"
                listTopics="@{viewModel.currentTopics}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:reverseLayout="false" />

            <TextView
                android:id="@+id/empty_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_items_available"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_topic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/add_topic"
                android:src="@drawable/ic_baseline_add_24"
                app:backgroundTint="@color/purple_700"
                app:tint="@android:color/white" />

        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>